Fix date cropping by changing overflow to visible on upper-row

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -209,7 +209,7 @@ p {
     }
     .upper-row {
         position: relative;
-        overflow: hidden;
+        overflow: visible;
         margin-bottom: 2px;
     }
     .job-title, .degree {
